JS flicker temp fix
Delays showing the main container until every element has been loaded
and JS has been executed

--- a/design/less/main.min.less
+++ b/design/less/main.min.less
@@ -46,6 +46,10 @@ a {
 	display: block !important;
 	}
 
+body > .container-fluid {
+	display: none;
+	}
+
 /*--------------------------------------------------*/
 /* Inputs */
 /*--------------------------------------------------*/
