Now using LESS instead of CSS

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1,11 +1,21 @@
 /*--------------------------------------------------*/
-/* Import CSS files */
+/* Import Bootstrap */
 /*--------------------------------------------------*/
 
-@import "bootstrap.min.css";
-@import "bootstrap-responsive.min.css";
-@import "font-awesome.css";
-@import "../prettify/prettify.css";
+@import "bootstrap/bootstrap.less";
+
+/*--------------------------------------------------*/
+/* If you want to embed your Vanilla forum, uncomment
+the following line to enable the special embed.less */
+/*--------------------------------------------------*/
+
+//@import "embed.less";
+
+/*--------------------------------------------------*/
+/* The following files are optional LESS skins */
+/*--------------------------------------------------*/
+
+//@import "linen.less";
 
 /*--------------------------------------------------*/
 /* Main elements */
