--- a/design/less/plugins/CLEditor.less
+++ b/design/less/plugins/CLEditor.less
@@ -5,8 +5,17 @@
 	padding-right: 2px !important;
 	}
 
+.CommentForm .Buttons span {
+	display: none;
+	}
+
 .cleditorMain {
-	border: 1px solid @inputBorder;
+	border: 1px solid @tableBorder;
 	padding: 0;
+	}
+
+.cleditorToolbar {
+	background: @whiterSmoke;
+	border-bottom: 1px solid @tableBorder;
 	}
 
