--- a/design/less/plugins/QnA.less
+++ b/design/less/plugins/QnA.less
@@ -1,14 +1,38 @@
 // Styles for the QnA plugin
 // -------------------------------------------------//
 
-.Tag.QnA-Accepted {
+.Tag.QnA-Accepted,
+.Tag.QnA-Rejected {
 	.label();
-	background-color: @successText;
 	padding: 1px 4px 2px !important;
 	span {
 		padding: 0 !important;
 		}
 	}
+
+.Tag.QnA-Accepted,
+.Tag.QnA-Rejected {
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	background: none;
+	.hide-text();
+	&:after {
+		font-family: FontAwesome;
+		font-weight: normal;
+		font-size: 40px;
+		}
+	}
+
+.Tag.QnA-Accepted:after {
+	color: @successText;
+	content: "\f058";
+	}
+
+.Tag.QnA-Rejected:after {
+	color: @errorText;
+	content: "\f057";
+	}	
 
 .QnA-Tag-Accepted {
 	.label();
