Just a bunch of new stuff

--- a/design/less/custom.less
+++ b/design/less/custom.less
@@ -4,6 +4,6 @@
 /*--------------------------------------------------*/
 
 /*--------------------------------------------------*/
-/* Insert your custom CSS here */
+/* Insert your custom LESS here */
 /*--------------------------------------------------*/
 
