--- a/design/less/plugins/CLEditor.less
+++ b/design/less/plugins/CLEditor.less
@@ -1,9 +1,5 @@
-// Styles for the WYSIWIG plugin
+// Styles for the CLEditor plugin
 // -------------------------------------------------//
-
-.TextBoxWrapper {
-	padding-right: 2px !important;
-	}
 
 .CommentForm .Buttons span {
 	display: none;
@@ -12,6 +8,7 @@
 .cleditorMain {
 	border: 1px solid @tableBorder;
 	padding: 0;
+	.box-sizing(border-box);
 	}
 
 .cleditorToolbar {
