--- a/design/less/bootstrap/bootstrap.less
+++ b/design/less/bootstrap/bootstrap.less
@@ -58,5 +58,8 @@
 @import "carousel.less";
 @import "hero-unit.less";
 
+// Responsive
+@import "responsive.less";
+
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
